--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'androix.navigation:navigation-fragment:2.2.1'
-    implementation 'androix.navigation:navigation-ui:2.2.1'
+    implementation 'com.google.android.material:material:1.1.0'
 
 }
